--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dewise | Professional Solutions</title>
+    <title>Dwise | Professional Solutions</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        /* --- GLOBAL STYLES (Bluvaron Theme) --- */
+        /* --- GLOBAL STYLES --- */
         :root {
-            --primary-color: #0056b3; /* Professional Blue */
+            --primary-color: #0056b3; 
             --secondary-color: #004494;
             --text-color: #333;
             --light-bg: #f8f9fa;
@@ -41,22 +41,21 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 15px 20px;
+            padding: 10px 20px; /* Reduced padding slightly to fit logo */
         }
 
-        .logo {
-            font-size: 24px;
-            font-weight: bold;
-            color: var(--primary-color);
-            display: flex;
-            align-items: center;
-            gap: 10px;
+        /* LOGO IMAGE STYLING */
+        .logo img {
+            height: 50px; /* Adjust this if the logo is too big/small */
+            width: auto;
+            display: block;
         }
 
         .nav-links {
             list-style: none;
             display: flex;
             gap: 30px;
+            align-items: center;
         }
 
         .nav-links a {
@@ -179,9 +178,10 @@
 
     <header>
         <div class="nav-container">
-            <div class="logo">
-                <i class="fas fa-layer-group"></i> Dewise
-            </div>
+            <a href="#" class="logo">
+                <img src="assets/img/logo.png" alt="Dwise Logo">
+            </a>
+            
             <ul class="nav-links">
                 <li><a href="#hero">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -193,7 +193,7 @@
 
     <section class="hero" id="hero">
         <h1>Smart Solutions for Your Business</h1>
-        <p>Dewise helps you navigate complex challenges with ease. We provide top-tier consultancy and digital services tailored to your needs.</p>
+        <p>Dwise helps you navigate complex challenges with ease. We provide top-tier consultancy and digital services tailored to your needs.</p>
         <a href="#contact" class="hero-btn">Get Started</a>
     </section>
 
@@ -223,8 +223,8 @@
 
     <section class="section-padding" id="about">
         <div class="about-container">
-            <h2>About Dewise</h2>
-            <p>We are a dedicated team of professionals committed to delivering excellence. Like the leading firms in the industry, we prioritize transparency, efficiency, and customer satisfaction. Whether you are a startup or an established enterprise, Dewise is your partner in success.</p>
+            <h2>About Dwise</h2>
+            <p>We are a dedicated team of professionals committed to delivering excellence. Like the leading firms in the industry, we prioritize transparency, efficiency, and customer satisfaction. Whether you are a startup or an established enterprise, Dwise is your partner in success.</p>
         </div>
     </section>
 
@@ -239,26 +239,26 @@
                 
                 <div class="info-item">
                     <i class="fas fa-map-marker-alt"></i>
-                    <span>123 Innovation Street, Tech Park, Bangalore, Karnataka 560001</span>
+                    <span>Katha No.287,SY No-5,Hoddie village,KR Pura Hobli,Bangalore, Karnataka 560048</span>
                 </div>
                 <div class="info-item">
                     <i class="fas fa-phone"></i>
-                    <span>+91 98765 43210</span>
+                    <span>+91 9705502157</span>
                 </div>
                 <div class="info-item">
                     <i class="fas fa-envelope"></i>
-                    <span>support@dewise.com</span>
+                    <span>support@dwise.com</span>
                 </div>
             </div>
 
             <div class="map-container">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.965427593259!2d77.5945627!3d12.9715987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1670c9b44e6d%3A0xf8dfc3e8517e4fe0!2sBengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1700000000000!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.310168925565!2d77.6186415750865!3d12.887796987420138!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1508dae92f25%3A0xc63806a9282361d7!2sKudlu%2C%20Bengaluru%2C%20Karnataka%20560068!5e0!3m2!1sen!2sin!4v1707727189000!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2025 Dewise App. All rights reserved.</p>
+        <p>©️ 2025 Dwise App. All rights reserved.</p>
     </footer>
 
 </body>
