--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dwise | Professional Solutions</title> 
+    <title>Dewise | Professional Solutions</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
+
         /* --- GLOBAL STYLES --- */
         :root {
             --primary-color: #0056b3; 
@@ -252,7 +253,7 @@
             </div>
 
             <div class="map-container">
-                <iframe src="https://share.google/SLAp2ve5PWbWnKSZl" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.310168925565!2d77.6186415750865!3d12.887796987420138!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1508dae92f25%3A0xc63806a9282361d7!2sKudlu%2C%20Bengaluru%2C%20Karnataka%20560068!5e0!3m2!1sen!2sin!4v1707727189000!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
     </section>
