--- a/index.html
+++ b/index.html
@@ -180,8 +180,11 @@
     <header>
         <div class="nav-container">
           <div class="logo">
-    <i class="fas fa-layer-group"></i> Dwise
+    <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAACAAAAAXdCAYAAAB90L0BAAAQAElEQVR4AXz9iYI...//5df/9Hy8/6L++7n/8t/Sy/5P5v6B//Ofz/q//ehn67//+tv/zvy76x386/876" 
+         alt="Logo" class="logo-img">
+    Dwise Consultancy
 </div>
+
 
             <ul class="nav-links">
                 <li><a href="#hero">Home</a></li>
