--- a/index.html
+++ b/index.html
@@ -243,11 +243,12 @@
                 
                 <div class="info-item">
                     <i class="fas fa-map-marker-alt"></i>
-                    <span>123 Innovation Street, Tech Park, Bangalore, Karnataka 560001</span>
+                    <span>Katha No.287, SY No-5,
+Hoodi Village, Mahadeva Pura, KR Pura Hobli, Bangalore, Karnataka- 560048</span>
                 </div>
                 <div class="info-item">
                     <i class="fas fa-phone"></i>
-                    <span>+91 98765 43210</span>
+                    <span>+91 9705502157</span>
                 </div>
                 <div class="info-item">
                     <i class="fas fa-envelope"></i>
@@ -256,12 +257,15 @@
             </div>
 
            <div class="map-container">
-    <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.310168925565!2d77.6186415750865!3d12.887796987420138!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1508dae92f25%3A0xc63806a9282361d7!2sKudlu%2C%20Bengaluru%2C%20Karnataka%20560068!5e0!3m2!1sen!2sin!4v1707727189000!5m2!1sen!2sin"
-        allowfullscreen=""
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
+  <iframe
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31127.57212988662!2d77.6995!3d12.9927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae14ecc9f77279%3A0x0!2zMTLCsDU5JzAxLjAiTiA3N8KwNDMnNDIuMCJF!5e0!3m2!1sen!2sin!4v1707727189000!5m2!1sen!2sin"
+  width="600"
+  height="450"
+  style="border:0;"
+  allowfullscreen=""
+  loading="lazy"
+  referrerpolicy="no-referrer-when-downgrade">
+</iframe>
 </div>
         </div>
     </section>
