--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
     <section class="section-padding" id="about">
         <div class="about-container">
-            <h2>About Dewise</h2>
+            <h2>About Dwise</h2>
             <p>We are a dedicated team of professionals committed to delivering excellence. Like the leading firms in the industry, we prioritize transparency, efficiency, and customer satisfaction. Whether you are a startup or an established enterprise, Dewise is your partner in success.</p>
         </div>
     </section>
