--- a/index.html
+++ b/index.html
@@ -257,15 +257,16 @@ Hoodi Village, Mahadeva Pura, KR Pura Hobli, Bangalore, Karnataka- 560048</span>
             </div>
 
            <div class="map-container">
-  <iframe
-  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31127.57212988662!2d77.6995!3d12.9927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae14ecc9f77279%3A0x0!2zMTLCsDU5JzAxLjAiTiA3N8KwNDMnNDIuMCJF!5e0!3m2!1sen!2sin!4v1707727189000!5m2!1sen!2sin"
-  width="600"
-  height="450"
-  style="border:0;"
-  allowfullscreen=""
-  loading="lazy"
-  referrerpolicy="no-referrer-when-downgrade">
+<iframe 
+    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15563.157!2d77.71556!3d12.99333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1710000000000"
+    width="100%"
+    height="400"
+    style="border:0; border-radius:10px;"
+    allowfullscreen=""
+    loading="lazy"
+    referrerpolicy="no-referrer-when-downgrade">
 </iframe>
+
 </div>
         </div>
     </section>
