--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dewise | Professional Solutions</title>
+    <title>Dwise | Professional Solutions</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         /* --- GLOBAL STYLES (Bluvaron Theme) --- */
@@ -179,10 +179,21 @@
 
     <header>
         <div class="nav-container">
-          <div class="logo">
-            <i class="fas fa-layer-group"></i> Dwise Consultancy
+            <div class="logo">
+                <i class="fas fa-layer-group"></i> Dwise
+            </div>
+            <ul class="nav-links">
+                <li><a href="#hero">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact" class="cta-button">Contact Us</a></li>
+            </ul>
+        </div>
+    </header>
 
-    
+    <section class="hero" id="hero">
+        <h1>Smart Solutions for Your Business</h1>
+        <p>Dewise helps you navigate complex challenges with ease. We provide top-tier consultancy and digital services tailored to your needs.</p>
         <a href="#contact" class="hero-btn">Get Started</a>
     </section>
 
@@ -194,8 +205,8 @@
         <div class="services-grid">
             <div class="service-card">
                 <div class="service-icon"><i class="fas fa-laptop-code"></i></div>
-                <h3>Digital Solutions</h3>
-                <p>Modern web and app development services to keep your business ahead of the curve.</p>
+                <h3>Interview Preparation</h3>
+                <p>Your personalized roadmap to interview success.</p>
             </div>
             <div class="service-card">
                 <div class="service-icon"><i class="fas fa-file-contract"></i></div>
@@ -241,23 +252,14 @@ Hoodi Village, Mahadeva Pura, KR Pura Hobli, Bangalore, Karnataka- 560048</span>
                 </div>
             </div>
 
-           <div class="map-container">
-<iframe 
-    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15563.157!2d77.71556!3d12.99333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1710000000000"
-    width="100%"
-    height="400"
-    style="border:0; border-radius:10px;"
-    allowfullscreen=""
-    loading="lazy"
-    referrerpolicy="no-referrer-when-downgrade">
-</iframe>
-
-</div>
+            <div class="map-container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.965427593259!2d77.5945627!3d12.9715987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1670c9b44e6d%3A0xf8dfc3e8517e4fe0!2sBengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1700000000000!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
+            </div>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2025 Dewise App. All rights reserved.</p>
+        <p>&copy; 2025 Dwise App. All rights reserved.</p>
     </footer>
 
 </body>
