--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
     </header>
 
     <section class="hero" id="hero">
-        <h1>Smart Solutions for Your Business</h1>
-        <p>Dewise helps you navigate complex challenges with ease. We provide top-tier consultancy and digital services tailored to your needs.</p>
+        <h1>Smart Solutions for Your Jobs</h1>
+        <p>Dwise helps you navigate complex challenges with ease. We provide top-tier consultancy and digital services tailored to your needs.</p>
         <a href="#contact" class="hero-btn">Get Started</a>
     </section>
 
