--- a/index.html
+++ b/index.html
@@ -234,6 +234,29 @@
         </div>
         <div class="contact-container">
             <div class="contact-info">
+             <div class="contact-cta-block">
+                <h3>Connect With Us</h3>
+                <div class="contact-button-container">
+                    <a href="https://wa.me/919705502157" target="_blank" class="contact-button">
+                        Get In Touch 
+                        <span class="contact-arrow-icon"><i class="fas fa-arrow-right"></i></span>
+                    </a>
+                </div>
+                <div class="social-links">
+                    <a href="https://wa.me/919705502157" target="_blank" title="Chat on WhatsApp">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+                    <a href="#" class="passive" title="LinkedIn (Inactive)">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="#" class="passive" title="Facebook (Inactive)">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                    <a href="#" class="passive" title="Instagram (Inactive)">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </div>
+            </div>
                 <h3>Contact Information</h3>
                 <p>We are here to assist you. Reach out to us anytime.</p>
                 
