--- a/index.html
+++ b/index.html
@@ -268,8 +268,12 @@ Hoodi Village, Mahadeva Pura, KR Pura Hobli, Bangalore, Karnataka- 560048</span>
             </div>
 
             <div class="map-container">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.965427593259!2d77.5945627!3d12.9715987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1670c9b44e6d%3A0xf8dfc3e8517e4fe0!2sBengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1700000000000!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
-            </div>
+              <iframe 
+                src="https://maps.app.goo.gl/4HnLuzWcscTBBnqR7?g_st=ipc"
+                allowfullscreen="" 
+                loading="lazy">
+            </iframe>
+        </div>
         </div>
     </section>
 
