--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@ Hoodi Village, Mahadeva Pura, KR Pura Hobli, Bangalore, Karnataka- 560048</span>
             </div>
 
             <div class="map-container">
-              <iframe 
-                src="https://maps.app.goo.gl/4HnLuzWcscTBBnqR7?g_st=ipc"
+          <iframe 
+                src="https://maps.google.com/maps?q=Katha+No.287,+SY+No-5,+Hoodi+Village,+Mahadeva+Pura,+KR+Pura+Hobli,+Bangalore,+Karnataka-+560048&t=&z=14&ie=UTF8&iwloc=&output=embed"
                 allowfullscreen="" 
                 loading="lazy">
             </iframe>
