--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dwise | Professional Solutions</title>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
     <style>
-        /* --- GLOBAL STYLES (Bluvaron Theme) --- */
         :root {
-            --primary-color: #0056b3; /* Professional Blue */
+            --primary-color: #0056b3;
             --secondary-color: #004494;
             --text-color: #333;
             --light-bg: #f8f9fa;
@@ -20,15 +21,13 @@
             margin: 0;
             padding: 0;
             color: var(--text-color);
-            line-height: 1.6;
         }
 
         h1, h2, h3 { color: #2c3e50; }
         a { text-decoration: none; color: inherit; }
 
-        /* --- NAVIGATION BAR --- */
         header {
-            background: var(--white);
+            background: white;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
             position: sticky;
             top: 0;
@@ -59,11 +58,6 @@
             gap: 30px;
         }
 
-        .nav-links a {
-            font-weight: 500;
-            transition: color 0.3s;
-        }
-
         .nav-links a:hover { color: var(--primary-color); }
 
         .cta-button {
@@ -74,44 +68,38 @@
             font-weight: bold;
         }
 
-        /* --- HERO SECTION --- */
         .hero {
-            background: linear-gradient(rgba(0, 86, 179, 0.9), rgba(0, 68, 148, 0.9)), url('https://source.unsplash.com/random/1920x1080?office') center/cover;
+            background: linear-gradient(rgba(0,86,179,.9), rgba(0,68,148,.9)),
+            url('https://source.unsplash.com/random/1920x1080?office') center/cover;
             color: white;
             text-align: center;
             padding: 100px 20px;
         }
 
-        .hero h1 { color: white; font-size: 3rem; margin-bottom: 20px; }
-        .hero p { font-size: 1.2rem; max-width: 700px; margin: 0 auto 30px; }
-        
+        .hero h1 { font-size: 3rem; }
+        .hero p { max-width: 700px; margin: auto; }
+
         .hero-btn {
             background: white;
             color: var(--primary-color);
             padding: 15px 30px;
-            font-size: 1.1rem;
             border-radius: 30px;
             font-weight: bold;
             display: inline-block;
+            margin-top: 20px;
         }
 
-        /* --- SERVICES SECTION --- */
         .section-padding { padding: 80px 20px; }
-        .bg-light { background-color: var(--light-bg); }
+        .bg-light { background: var(--light-bg); }
 
         .section-title {
             text-align: center;
             margin-bottom: 50px;
         }
 
-        .section-title h2 {
-            font-size: 2.5rem;
-            margin-bottom: 10px;
-        }
-
         .services-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
             gap: 30px;
             max-width: 1200px;
             margin: auto;
@@ -121,146 +109,111 @@
             background: white;
             padding: 30px;
             border-radius: 10px;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.05);
             text-align: center;
-            transition: transform 0.3s;
+            box-shadow: 0 5px 15px rgba(0,0,0,.05);
         }
-
-        .service-card:hover { transform: translateY(-5px); }
 
         .service-icon {
             font-size: 40px;
             color: var(--primary-color);
-            margin-bottom: 20px;
         }
 
-        /* --- ABOUT SECTION --- */
         .about-container {
-            max-width: 1000px;
+            max-width: 900px;
             margin: auto;
             text-align: center;
         }
 
-        /* --- CONTACT & LOCATION --- */
-        .contact-container {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 40px;
-            max-width: 1200px;
+        .job-form {
+            max-width: 600px;
             margin: auto;
+            background: white;
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 5px 20px rgba(0,0,0,.1);
         }
 
-        .contact-info { flex: 1; min-width: 300px; }
-        .map-container { flex: 1; min-width: 300px; height: 400px; }
-
-        .info-item {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            margin-bottom: 20px;
-            font-size: 1.1rem;
+        .job-form input, .job-form button {
+            width: 100%;
+            padding: 12px;
+            margin-bottom: 15px;
         }
 
-        .info-item i { color: var(--primary-color); font-size: 1.2rem; }
-
-        iframe { width: 100%; height: 100%; border: 0; border-radius: 10px; }
-
-        /* --- FOOTER --- */
         footer {
             background: #222;
             color: white;
             text-align: center;
             padding: 20px;
-            margin-top: 0;
         }
     </style>
 </head>
+
 <body>
 
-    <header>
-        <div class="nav-container">
-            <div class="logo">
-                <i class="fas fa-layer-group"></i> Dwise
-            </div>
-            <ul class="nav-links">
-                <li><a href="#hero">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact" class="cta-button">Contact Us</a></li>
-            </ul>
+<header>
+    <div class="nav-container">
+        <div class="logo">
+            <i class="fas fa-layer-group"></i> Dwise
         </div>
-    </header>
+        <ul class="nav-links">
+            <li><a href="#hero">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#job">Careers</a></li>
+            <li><a href="#job" class="cta-button">Apply Job</a></li>
+        </ul>
+    </div>
+</header>
 
-    <section class="hero" id="hero">
-        <h1>Smart Solutions for Your Jobs</h1>
-        <p>Dwise helps you navigate complex challenges with ease. We provide top-tier consultancy and digital services tailored to your needs.</p>
-        <a href="#contact" class="hero-btn">Get Started</a>
-    </section>
+<section class="hero" id="hero">
+    <h1>Smart Solutions for Your Jobs</h1>
+    <p>We help you get the right job with professional guidance.</p>
+    <a href="#job" class="hero-btn">Apply Now</a>
+</section>
 
-    <section class="section-padding bg-light" id="services">
-        <div class="section-title">
-            <h2>Our Expertise</h2>
-            <p>Comprehensive services designed for growth and compliance.</p>
+<section class="section-padding bg-light" id="services">
+    <div class="section-title">
+        <h2>Our Expertise</h2>
+    </div>
+
+    <div class="services-grid">
+        <div class="service-card">
+            <div class="service-icon"><i class="fas fa-laptop-code"></i></div>
+            <h3>Interview Preparation</h3>
         </div>
-        <div class="services-grid">
-            <div class="service-card">
-                <div class="service-icon"><i class="fas fa-laptop-code"></i></div>
-                <h3>Interview Preparation</h3>
-                <p>Your personalized roadmap to interview success.</p>
-            </div>
-            <div class="service-card">
-                <div class="service-icon"><i class="fas fa-file-contract"></i></div>
-                <h3>Consultancy</h3>
-                <p>Expert advice on compliance, registration, and strategic planning.</p>
-            </div>
-            <div class="service-card">
-                <div class="service-icon"><i class="fas fa-chart-line"></i></div>
-                <h3>Growth Strategy</h3>
-                <p>Data-driven insights to help scale your operations effectively.</p>
-            </div>
-        </div>
-    </section>
 
-    <section class="section-padding" id="about">
-        <div class="about-container">
-            <h2>About Dwise</h2>
-            <p>We are a dedicated team of professionals committed to delivering excellence. Like the leading firms in the industry, we prioritize transparency, efficiency, and customer satisfaction. Whether you are a startup or an established enterprise, Dewise is your partner in success.</p>
+        <div class="service-card">
+            <div class="service-icon"><i class="fas fa-file-contract"></i></div>
+            <h3>Consultancy</h3>
         </div>
-    </section>
 
-    <section class="section-padding bg-light" id="contact">
-        <div class="section-title">
-            <h2>Visit Our Office</h2>
+        <div class="service-card">
+            <div class="service-icon"><i class="fas fa-chart-line"></i></div>
+            <h3>Career Growth</h3>
         </div>
-        <div class="contact-container">
-            <div class="contact-info">
-                <h3>Contact Information</h3>
-                <p>We are here to assist you. Reach out to us anytime.</p>
-                
-                <div class="info-item">
-                    <i class="fas fa-map-marker-alt"></i>
-                    <span>Katha No.287, SY No-5,
-Hoodi Village, Mahadeva Pura, KR Pura Hobli, Bangalore, Karnataka- 560048</span>
-                </div>
-                <div class="info-item">
-                    <i class="fas fa-phone"></i>
-                    <span>+91 9705502157</span>
-                </div>
-                <div class="info-item">
-                    <i class="fas fa-envelope"></i>
-                    <span>support@dewise.com</span>
-                </div>
-            </div>
+    </div>
+</section>
 
-            <div class="map-container">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.965427593259!2d77.5945627!3d12.9715987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1670c9b44e6d%3A0xf8dfc3e8517e4fe0!2sBengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1700000000000!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
-            </div>
-        </div>
-    </section>
+<!-- JOB APPLICATION -->
+<section class="section-padding" id="job">
+    <div class="section-title">
+        <h2>If You Need a Job</h2>
+        <p>Fill the form below and upload your resume</p>
+    </div>
 
-    <footer>
-        <p>&copy; 2025 Dwise App. All rights reserved.</p>
-    </footer>
+    <form class="job-form" action="submit-job.php" method="POST" enctype="multipart/form-data">
+        <input type="text" name="name" placeholder="Full Name" required>
+        <input type="email" name="email" placeholder="Email Address" required>
+        <input type="tel" name="phone" placeholder="Mobile Number" required>
+        <input type="text" name="experience" placeholder="Years of Experience">
+        <input type="file" name="resume" accept=".pdf,.doc,.docx" required>
+
+        <button type="submit" class="cta-button">Submit Application</button>
+    </form>
+</section>
+
+<footer>
+    <p>&copy; 2025 Dwise. All Rights Reserved.</p>
+</footer>
 
 </body>
 </html>
