--- a/index.html
+++ b/index.html
@@ -210,6 +210,43 @@
         <button type="submit" class="cta-button">Submit Application</button>
     </form>
 </section>
+    <section class="section-padding bg-light" id="contact">
+    <div class="section-title">
+        <h2>Contact Us</h2>
+        <p>We are here to help you</p>
+    </div>
+
+    <div class="contact-container">
+        <div class="contact-info">
+            <div class="info-item">
+                <i class="fas fa-map-marker-alt"></i>
+                <span>
+                    Katha No.287, SY No-5,<br>
+                    Hoodi Village, Mahadeva Pura,<br>
+                    Bangalore – 560048
+                </span>
+            </div>
+
+            <div class="info-item">
+                <i class="fas fa-phone"></i>
+                <span>+91 9705502157</span>
+            </div>
+
+            <div class="info-item">
+                <i class="fas fa-envelope"></i>
+                <span>support@dewise.com</span>
+            </div>
+        </div>
+
+        <div class="map-container">
+            <iframe
+                src="https://www.google.com/maps?q=12.9933,77.7156&output=embed"
+                loading="lazy">
+            </iframe>
+        </div>
+    </div>
+</section>
+
 
 <footer>
     <p>&copy; 2025 Dwise. All Rights Reserved.</p>
