--- a/index.html
+++ b/index.html
@@ -211,38 +211,35 @@
     </form>
 </section>
     <section class="section-padding bg-light" id="contact">
-    <div class="section-title">
-        <h2>Contact Us</h2>
-        <p>We are here to help you</p>
-    </div>
-
-    <div class="contact-container">
-        <div class="contact-info">
-            <div class="info-item">
-                <i class="fas fa-map-marker-alt"></i>
-                <span>
-                    Katha No.287, SY No-5,<br>
-                    Hoodi Village, Mahadeva Pura,<br>
-                    Bangalore – 560048
-                </span>
+        <div class="section-title">
+            <h2>Visit Our Office</h2>
+        </div>
+        <div class="contact-container">
+            <div class="contact-info">
+                <h3>Contact Information</h3>
+                <p>We are here to assist you. Reach out to us anytime.</p>
+                
+                <div class="info-item">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <span>Katha No.287, SY No-5,
+Hoodi Village, Mahadeva Pura, KR Pura Hobli, Bangalore, Karnataka- 560048</span>
+                </div>
+                <div class="info-item">
+                    <i class="fas fa-phone"></i>
+                    <span>+91 9705502157</span>
+                </div>
+                <div class="info-item">
+                    <i class="fas fa-envelope"></i>
+                    <span>support@dewise.com</span>
+                </div>
             </div>
 
-            <div class="info-item">
-                <i class="fas fa-phone"></i>
-                <span>+91 9705502157</span>
-            </div>
-
-            <div class="info-item">
-                <i class="fas fa-envelope"></i>
-                <span>support@dewise.com</span>
+            <div class="map-container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.965427593259!2d77.5945627!3d12.9715987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1670c9b44e6d%3A0xf8dfc3e8517e4fe0!2sBengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1700000000000!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
-
-        <div class="map-container">
-            
-        </div>
-    </div>
-</section>
+    </section>
+   
 
 
 <footer>
