--- a/index.html
+++ b/index.html
@@ -240,6 +240,61 @@ Hoodi Village, Mahadeva Pura, KR Pura Hobli, Bangalore, Karnataka- 560048</span>
         </div>
     </section>
    
+<!-- SUBSCRIBE / INNER CIRCLE FEATURE -->
+<div class="subscribe-container" style="max-width:500px; margin:40px auto; text-align:center; padding:0 20px;">
+  <h2>GET INTO OUR INNER CIRCLE</h2>
+
+  <form id="subscribeForm" action="https://formspree.io/f/mkgpdddr" method="POST">
+    <input type="hidden" name="_subject" value="New Inner Circle Subscriber - Dwise">
+
+    <label for="email">Enter your email:</label><br>
+
+    <input type="email" id="email" name="email" required
+           placeholder="you@example.com"
+           style="width:100%; padding:10px; margin:12px 0; box-sizing:border-box; font-size:1em;">
+
+    <button type="submit"
+            style="padding:10px 20px; font-size:1em; background-color:#007BFF; color:white; border:none; border-radius:4px; cursor:pointer;">
+      Subscribe
+    </button>
+  </form>
+
+  <div id="thanksMessage" style="display:none; margin-top:20px;">
+    <p>Thank you for subscribing!</p>
+  </div>
+
+  <div id="errorMessage" style="display:none; margin-top:20px; color:red;">
+    <p>Oops! Something went wrong. Please try again.</p>
+  </div>
+</div>
+
+<script>
+  const form = document.getElementById('subscribeForm');
+
+  form.addEventListener('submit', function(event) {
+    event.preventDefault();
+
+    const formData = new FormData(form);
+
+    fetch(form.action, {
+      method: form.method,
+      body: formData,
+      headers: { 'Accept': 'application/json' }
+    })
+    .then(response => {
+      if (response.ok) {
+        form.style.display = 'none';
+        document.getElementById('thanksMessage').style.display = 'block';
+      } else {
+        throw new Error('Submission failed');
+      }
+    })
+    .catch(error => {
+      document.getElementById('errorMessage').style.display = 'block';
+      console.error(error);
+    });
+  });
+</script>
 
 
 <footer>
