--- a/index.html
+++ b/index.html
@@ -185,28 +185,19 @@ footer {
 </div>
 </section>
 
-<section class="section-padding" id="job">
-<div class="section-title">
-    <h2>If You Need a Job</h2>
-    <p>Submit your details</p>
-</div>
+ 
+
+<section class="section-padding bg-light">
+<div class="subscribe-container">
+<h2>LOOKING FOR A JOB</h2>
+
+<p>submit details</p>
 <form class="job-form">
     <input type="text" placeholder="Full Name" required>
     <input type="email" placeholder="Email Address" required>
     <input type="tel" placeholder="Mobile Number" required>
     <input type="file" required>
     <button class="cta-button">Submit Application</button>
-</form>
-</section>
-
-<section class="section-padding bg-light">
-<div class="subscribe-container">
-<h2>GET INTO OUR INNER CIRCLE</h2>
-
-<form id="subscribeForm" action="https://formspree.io/f/mkgpdddr" method="POST">
-<input type="hidden" name="_subject" value="New Inner Circle Subscriber - Dwise">
-<input type="email" name="email" placeholder="you@example.com" required>
-<button type="submit" class="cta-button">Subscribe</button>
 </form>
 
 <div id="thanksMessage" style="display:none;">
@@ -226,11 +217,7 @@ footer {
     Hoodi Village, Mahadeva Pura, Bangalore – 560048</div>
     <div class="info-item"><i class="fas fa-phone"></i> +91 9705502157</div>
     <div class="info-item"><i class="fas fa-envelope"></i> support@dewise.com</div>
-</div>
-<div class="map-container">
-<iframe src="https://www.google.com/maps?q=12.9716,77.5946&output=embed"></iframe>
-</div>
-</div>
+ 
 </section>
 
 <footer>
