--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@ footer {
     <input type="email" placeholder="Email Address" required>
     <input type="tel" placeholder="Mobile Number" required>
     <input type="file" required>
-    <button class="cta-button" type="submit">Submit Application</button>
+     
+    <button type="submit" class="cta-button">Subscribe</button>
 </form>
 </section>
 
