--- a/index.html
+++ b/index.html
@@ -206,6 +206,11 @@ footer {
 <form id="subscribeForm" action="https://formspree.io/f/mkgpdddr" method="POST">
 <input type="hidden" name="_subject" value="New Inner Circle Subscriber - Dwise">
 <input type="email" name="email" placeholder="you@example.com" required>
+    <input type="text" placeholder="Full Name" required>
+    <input type="email" placeholder="Email Address" required>
+    <input type="tel" placeholder="Mobile Number" required>
+    <input type="file" required>
+
 <button type="submit" class="cta-button">Subscribe</button>
 </form>
 
