--- a/index.html
+++ b/index.html
@@ -143,15 +143,15 @@ footer{
       <li><a href="#services">Services</a></li>
       <li><a href="#apply">Careers</a></li>
       <li><a href="#contact">Contact</a></li>
-      <li><a href="#apply" class="cta-button">Apply Job</a></li>
+      
     </ul>
   </div>
 </header>
 
 <section class="hero" id="hero">
-  <h1>Smart Solutions for Your Jobs</h1>
-  <p>We help you get the right job with professional guidance.</p>
-  <a href="#apply" class="hero-btn">Apply Now</a>
+  <h1>Smart Solutions for Smarter Career Transitions</h1>
+  <p>We help you change jobs with better salary packages and career growth in top MNCs.</p>
+  <a href="#apply" class="hero-btn">Fill Details</a>
 </section>
 
 <section class="section bg-light" id="services">
@@ -174,8 +174,8 @@ footer{
 
 <section class="section" id="apply">
   <div class="section-title">
-    <h2>Apply for Job</h2>
-    <p>All details will be sent to our email</p>
+    <h2>LOOKING FOR JOB</h2>
+    <p>Fill your details</p>
   </div>
 
   <!-- FORM -->
@@ -189,14 +189,14 @@ footer{
     <input type="email" name="email" placeholder="Email Address" required>
     <input type="tel" name="mobile" placeholder="Mobile Number" required>
     <input type="text" name="experience" placeholder="Years of Experience" required>
-    <input type="text" name="domain" placeholder="Domain (Java / Testing / HR)" required>
+    <input type="text" name="domain" placeholder="Domain (Java / Testing)" required>
 
     <!-- Resume note -->
     <p style="font-size:13px;color:#777">
-      ⚠ Resume upload requires backend (PHP). Free Formspree does not send files.
+     
     </p>
 
-    <button type="submit" class="cta-button">Submit Application</button>
+    <button type="submit" class="cta-button">Submit</button>
   </form>
 
   <div id="thanksMessage" style="display:none;text-align:center;margin-top:20px;">
@@ -217,10 +217,31 @@ footer{
       <p><i class="fas fa-envelope"></i> support@dewise.com</p>
     </div>
     <div class="map">
-      <iframe src="https://www.google.com/maps?q=12.9716,77.5946&output=embed"></iframe>
+     <iframe 
+  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7775.342578140625!2d77.7157795!3d12.9928639!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae119687561c5d%3A0xfcc06db075cdb384!2sARDENTE%20OFFICE%20ONE%2C%20Hoodi%2C%20Bengaluru%2C%20Karnataka%20560048!5e0!3m2!1sen!2sin!4v1765617863404!5m2!1sen!2sin"
+  style="border:0;"
+  loading="lazy"
+  referrerpolicy="no-referrer-when-downgrade">
+</iframe>
+
     </div>
   </div>
 </section>
+  <section id="contact">
+  <h2>Contact Us</h2>
+
+  <form id="enquiryForm">
+    <input type="text" placeholder="Name" required />
+    <input type="email" placeholder="Email" required />
+    <textarea placeholder="Message" required></textarea>
+    <button type="submit">Send Enquiry</button>
+  </form>
+
+  <a class="whatsapp" href="https://wa.me/91XXXXXXXXXX" target="_blank">
+    Chat On WhatsApp
+  </a>
+</section>
+
 
 <footer>
   <p>&copy; 2025 Dwise. All Rights Reserved.</p>
