--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dwise | Professional Solutions</title>
+<title>Dwise Consultancy | Professional Solutions</title>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
@@ -215,7 +215,7 @@ footer{
       
   <h3 style="margin-bottom:15px;">Get in Touch</h3>
 
-  <a href="https://wa.me/919346397377?text=Hello%20Dwise%20Team%2C%20I%20am%20looking%20for%20job%20assistance."
+  <a href="https://wa.me/919705502157?text=Hello%20Dwise%20Team%2C%20I%20am%20looking%20for%20job%20assistance."
      target="_blank"
      style="display:inline-flex;align-items:center;gap:10px;
             background:#25D366;color:#fff;
@@ -245,7 +245,7 @@ footer{
 
 
 <footer>
-  <p>&copy; 2025 Dwise. All Rights Reserved.</p>
+  <p>&copy; 2025 Dwise Consultancy. All Rights Reserved.</p>
 </footer>
 
 <script>
